--- a/guest-app/pom.xml
+++ b/guest-app/pom.xml
@@ -70,6 +70,10 @@
 			<version>1.18.8</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
